refactor: image service